chore: finish project study
