# cmd/domain/usecases/auth_usecase/auth_login_request.go
@@ -1,0 +1,6 @@
+package auth_usecase
+
+type AuthLoginRequest struct {
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
