# cmd/main/docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api
 definitions:
+  auth_usecase.AuthLoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   http_util.HTTPError:
     properties:
       code:
@@ -9,7 +19,7 @@ definitions:
         example: status bad request
         type: string
     type: object
-  user_models.User:
+  user_models.UserWithoutPassword:
     properties:
       created_at:
         type: string
@@ -18,8 +28,6 @@ definitions:
       id:
         type: string
       name:
-        type: string
-      password:
         type: string
       updated_at:
         type: string
@@ -46,6 +54,32 @@ info:
   title: KitKit back golang
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Autentica um usuário pela senha
+      parameters:
+      - description: Authenticate
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/auth_usecase.AuthLoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Autorizado
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http_util.HTTPError'
+      summary: Autentica um usuário
+      tags:
+      - Auth
   /users:
     get:
       consumes:
@@ -58,7 +92,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/user_models.User'
+              $ref: '#/definitions/user_models.UserWithoutPassword'
             type: array
         "400":
           description: Bad Request
@@ -81,6 +115,8 @@ paths:
       produces:
       - application/json
       responses:
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -105,7 +141,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/user_models.User'
+            $ref: '#/definitions/user_models.UserWithoutPassword'
         "400":
           description: Bad Request
           schema:
